--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
     "connect-pg-simple": "^10.0.0",
+    "connect-redis": "^9.0.0",
     "cookie-parser": "^1.4.7",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
@@ -25,6 +26,7 @@
     "pdfkit": "^0.15.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
+    "redis": "^5.8.0",
     "sequelize": "^6.37.5",
     "svg-to-pdfkit": "^0.1.8",
     "xlsx": "^0.18.5"
