--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "compression": "^1.8.1",
     "connect-flash": "^0.1.1",
     "connect-pg-simple": "^10.0.0",
+    "connect-redis": "^9.0.0",
     "cookie-parser": "^1.4.7",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "express-rate-limit": "^7.4.1",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "express.js": "^1.0.0",
     "fast-csv": "^5.0.2",
+    "helmet": "^8.1.0",
     "html-to-text": "^9.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
@@ -25,6 +28,9 @@
     "pdfkit": "^0.15.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
+    "pino-http": "^10.5.0",
+    "prom-client": "^15.1.3",
+    "redis": "^5.8.1",
     "sequelize": "^6.37.5",
     "svg-to-pdfkit": "^0.1.8",
     "xlsx": "^0.18.5"
